# realestate

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  CLAUDE.md  KEEP_FILES.md  LOGOUT_FIX_DEPLOYMENT.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  check_333_3210.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_canonical_names.py  git-setup-complete.txt  nginx-site.conf  nginx.conf  pyproject.toml  run_scraper_with_env.sh  start_servers.sh  test_actual_scraping.py  test_address_normalizer.py  test_building_name_update.py  test_building_name_update_live.py  test_building_search.py  test_duplicate_detection.py  test_hiragana_search.py  test_homes_building_update.py  test_large_area.py  test_livable_detail.py  test_livable_new_property.py  test_livable_raw_html.py  test_livable_scraper.py  test_livable_with_logging.py  test_merge_history.py  test_nomu_address.py  test_nomu_address_detailed.py  test_nomu_address_element.py  (+21 more)
.githooks/: pre-commit
backend/: DATABASE_MANAGEMENT.md  DATABASE_SCHEMA_MANAGEMENT.md  SMART_SCRAPING_GUIDE.md  test_homes_v2.py  test_nomu_address.py
certs/: cert.pem  key.pem
docker/: README.md
docs/: ACTIVE_SCRAPERS.md  ADMIN_FEATURES.md  AWS_EC2_SETUP_GUIDE.md  AWS_SES_SETUP.md  BUILDING_NAME_MANAGEMENT_IMPLEMENTATION.md  BUILDING_NAME_MANAGEMENT_SPECIFICATION.md  CRITICAL_SPECIFICATIONS.md  CRON_SETUP.md  DATA_NORMALIZATION_GUIDE.md  DATA_NORMALIZATION_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  GOOGLE_OAUTH_SETUP.md  HTML_STRUCTURE_MONITORING.md  MAJORITY_VOTE_LOGIC.md  MAJORITY_VOTE_SYSTEM.md  MIGRATION_CURRENT_PRICE.md  PARALLEL_SCRAPING_DESIGN.md  PRODUCTION_DEPLOYMENT.md  README_COMPLETE.md  SCRAPER_ERROR_LOGGING.md  SCRAPER_EXECUTION_GUIDE.md  SCRAPER_IMPLEMENTATION_GUIDE.md  SCRAPER_SPECIFICATION.md  SCRAPING_DELAY_SPECIFICATION.md  SMART_SCRAPING_PRICE_BASED.md  SOLD_PROPERTY_PRICE_VOTING.md  SOLD_PROPERTY_SPECIFICATION.md  TRANSACTION_PRICES_API.md  database_design_v2.md  database_v2_examples.md  scraping_guidelines.md
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.docker.ts  vite.config.ts
scripts/: add_construction_date.py  check_db_structure.py  check_schema.py  complete_building_age_update.py  create_sample_data.py  db_helper.py  debug_building_age.py  debug_suumo.py  debug_suumo_scraper.py  test_api.py  (+10 more)
(+421 files in other folders)
