[tool.poetry]
name = "realestate-search"
version = "0.1.0"
description = "中古不動産横断検索システム"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
lxml = "^5.1.0"
python-dateutil = "^2.8.2"
apscheduler = "^3.10.4"
schedule = "^1.2.0"
aiohttp = "^3.9.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
jaconv = "^0.4.0"
selenium = "^4.34.2"
webdriver-manager = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true